# mvp-apps

./: .gitignore  README.md
mvp-01-role-todo/: .gitignore  README.md  app.py  models.py  pyproject.toml  requirements.txt
mvp-01-role-todo/migrations/versions/: c3d215b98b68_create_users_tasks_and_statuses_tables.py
